added README.md and countries.jar